tests/snapshots/snapshots__help-cd.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
Print the path of a worktree

Usage: wtm cd [OPTIONS] [NAME]

Arguments:
  [NAME]  Worktree to print; the main worktree when omitted

Options:
      --repo <PATH>  Operate on the repository at this path instead of the current directory
      --dir <PATH>   Data root holding the worktrees
  -q, --quiet        Silence progress messages
  -h, --help         Print help
