tests/snapshots/snapshots__help-doctor.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
Report on this repository, the data root and the creation method

Usage: wtm doctor [OPTIONS]

Options:
      --json         Emit JSON instead of text
      --repo <PATH>  Operate on the repository at this path instead of the current directory
      --dir <PATH>   Data root holding the worktrees
  -q, --quiet        Silence progress messages
  -h, --help         Print help
