tests/snapshots/snapshots__help-gc.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
Empty the trash and prune stale git metadata

Usage: wtm gc [OPTIONS]

Options:
      --repo <PATH>  Operate on the repository at this path instead of the current directory
      --wait         Sweep in the foreground instead of spawning a background reaper
      --dir <PATH>   Data root holding the worktrees
  -q, --quiet        Silence progress messages
  -h, --help         Print help
