tests/snapshots/snapshots__help-init.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
Rerun the init hook in a worktree

Usage: wtm init [OPTIONS] [NAME]

Arguments:
  [NAME]  Worktree to run the hook in; the current one when omitted

Options:
      --init <PATH>  Init hook to run, overriding the configured one
      --repo <PATH>  Operate on the repository at this path instead of the current directory
      --dir <PATH>   Data root holding the worktrees
  -q, --quiet        Silence progress messages
  -h, --help         Print help
