tests/snapshots/snapshots__help-ls.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
List the worktrees of this repository

Usage: wtm ls [OPTIONS]

Options:
      --json         Emit JSON instead of text
      --repo <PATH>  Operate on the repository at this path instead of the current directory
      --dir <PATH>   Data root holding the worktrees
  -q, --quiet        Silence progress messages
  -h, --help         Print help
