tests/snapshots/snapshots__help-new.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
Create a worktree and print its path

Usage: wtm new [OPTIONS] <NAME>

Arguments:
  <NAME>
          Name of the worktree; also the branch name after branch_prefix

Options:
      --base <REF>
          Commit the new branch starts from

      --repo <PATH>
          Operate on the repository at this path instead of the current directory

      --dir <PATH>
          Data root holding the worktrees

      --init <PATH>
          Init hook to run, overriding the configured one

      --no-init
          Do not run the init hook

  -q, --quiet
          Silence progress messages

      --fetch
          Fetch the base's remote before creating

      --clone-mode <MODE>
          How to populate the worktree

          Possible values:
          - auto:     Copy-on-write when the filesystem supports it, checkout otherwise
          - cow:      Copy-on-write, failing when it is unavailable
          - checkout: Always let git write the files
          
          [default: auto]

      --branch <NAME>
          Branch name, when it differs from the worktree name

  -h, --help
          Print help (see a summary with '-h')
