tests/snapshots/snapshots__help-shell.snap
---
source: tests/snapshots.rs
expression: "run(&[command, \"--help\"])"
---
Print a shell function that changes directory after `new` and `cd`

Usage: wtm shell [OPTIONS] <SHELL>

Arguments:
  <SHELL>  Shell to print a wrapper for [possible values: zsh, bash, fish]

Options:
      --repo <PATH>  Operate on the repository at this path instead of the current directory
      --dir <PATH>   Data root holding the worktrees
  -q, --quiet        Silence progress messages
  -h, --help         Print help
